--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,3 +12,11 @@
 .App {
     width: 880px;
 }
+
+.post {
+    display: flex;
+    padding: 15px;
+    border: 2px solid teal;
+    margin-top: 15px;
+    justify-content: space-between;
+}
